poster, report complete, code mostly complete, need to neated into fig scripts

--- a/works/thesis_report/bibliography.bib
+++ b/works/thesis_report/bibliography.bib
@@ -189,6 +189,13 @@ or symmetry",
     year = "2008"
 }
 
+@book{tibfried,
+    author = {{Friedman, J. and Hastie, T. and Tibshirani, R.}},
+    title = "The Elements of Statistical Learning",
+    journal = "springer",
+    year = "2001"
+}
+
 @article{whittle,
     author = {{Whittle P.}},
     title = "Stochastic-Processes in several dimensions",
